--- a/unbounce/index.html
+++ b/unbounce/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Unbounch</title>
     <link rel="stylesheet" href="./assests/css/style.css">
+    <link rel="stylesheet" href="./assests/css/responsive.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/fontawesome.min.css" />
@@ -127,10 +128,10 @@
                     <h1>Concisely describe <br> your offer</h1>
                     <div class="horizons-body">
                         <div class="row ">
-                            <div class="col-6 book">
+                            <div class="col-md-6 book">
                                 <img src="./assests/Images/book.png" alt="">
                             </div>
-                            <div class="col-4">
+                            <div class="col-md-4">
                                 <form action="" class="form">
                                     <div class="mb-3">
                                         <label for="exampleFormControlInput1" class="form-label text-white">First
@@ -172,7 +173,7 @@
             <div class="benefit">
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-4 gap-4">
+                        <div class="col-md-4">
                             <div class="data">
                                 <img src="./assests/Images/benifits1.svg" alt="">
                                 <h4>Benefit 1</h4>
@@ -259,8 +260,9 @@
                     <h1>Show visitors what they’re signing up for</h1>
                     <p>Include a video or photo to help people understand your offer (or just to hype ‘em up).</p>
                     <div class="pt-2 ">
-                        <iframe width="920" height="420" class="justify-center mx-auto" src="https://www.youtube.com/embed/yUJewGkHYjE" frameborder="0"></iframe>
-                      </div>
+                        <iframe  class="justify-center mx-auto"
+                            src="https://www.youtube.com/embed/yUJewGkHYjE" frameborder="0"></iframe>
+                    </div>
                 </div>
             </div>
             <!--end video section-->
@@ -286,24 +288,27 @@
                         <img src="./assests/Images/ok.svg" alt="">
                         <div class="text">
                             <h6>Detail 1</h6>
-                            <span>This is a great space to further clarify your offer, whether it’s additional benefits or <br> need-to-know details.</span>
+                            <span>This is a great space to further clarify your offer, whether it’s additional benefits
+                                or <br> need-to-know details.</span>
                         </div>
                     </div>
                     <div class="ditels">
                         <img src="./assests/Images/ok.svg" alt="">
                         <div class="text">
                             <h6>Detail 1</h6>
-                            <span>This is a great space to further clarify your offer, whether it’s additional benefits or <br> need-to-know details.</span>
+                            <span>This is a great space to further clarify your offer, whether it’s additional benefits
+                                or <br> need-to-know details.</span>
                         </div>
                     </div>
                     <div class="ditels">
                         <img src="./assests/Images/ok.svg" alt="">
                         <div class="text">
                             <h6>Detail 1</h6>
-                            <span>This is a great space to further clarify your offer, whether it’s additional benefits or <br> need-to-know details.</span>
+                            <span>This is a great space to further clarify your offer, whether it’s additional benefits
+                                or <br> need-to-know details.</span>
                         </div>
                     </div>
-                    
+
                 </div>
             </div>
             <!--end more-details section-->
@@ -312,7 +317,8 @@
             <div class="final-call">
                 <div class="container">
                     <h1>End with one final call to action</h1>
-                    <p>This is your last shot at converting someone. Remember to link the call to action <br> button so it sends visitors back to your form at the top of the page.</p>
+                    <p>This is your last shot at converting someone. Remember to link the call to action <br> button so
+                        it sends visitors back to your form at the top of the page.</p>
                     <button type="submit">clim now</button>
                 </div>
             </div>
@@ -335,58 +341,141 @@
     <!--end Horizons section-->
 
 
-<!--start card section-->
-<div class="card-data">
-    <div class="container">
-        <div class="card-top-data">
-            <h1>VIEW SIMILAR TEMPLATES TO HORIZONS</h1>
-            <p>agency-lead-generationbookconsultingebookecourseeducationeventfeaturedlead-generationminimalistreal-estaterestaurantsaaswebinarwordpress</p>
-        </div>
-        <div class="row row-cols-1 row-cols-md-4 g-4">
-            <div class="col">
-              <div class="card">
-                <img src="./assests/Images/card1.webp" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-shortTitle">Card title</h5>
-                  <p class="card-pragraph">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  <button type="submit" class="card-button">vue this template</button>
-                </div>
-              </div>
+    <!--start card section-->
+    <div class="card-data">
+        <div class="container">
+            <div class="card-top-data">
+                <h1>VIEW SIMILAR TEMPLATES TO HORIZONS</h1>
+                
             </div>
-            <div class="col">
-                <div class="card">
-                  <img src="./assests/Images/card1.webp" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-shortTitle">Card title</h5>
-                    <p class="card-pragraph">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                    <button type="submit" class="card-button">vue this template</button>
-                  </div>
+            <div class="row row-cols-1 row-cols-md-4 g-4">
+                <div class="col">
+                    <div class="card">
+                        <img src="./assests/Images/card1.webp" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-shortTitle">Card title</h5>
+                            <p class="card-pragraph">This is a longer card with supporting text below as a natural
+                                lead-in to additional content. This content is a little bit longer.</p>
+                            <button type="submit" class="card-button">vue this template</button>
+                        </div>
+                    </div>
                 </div>
-              </div>
-              <div class="col">
-                <div class="card">
-                  <img src="./assests/Images/card1.webp" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-shortTitle">Card title</h5>
-                    <p class="card-pragraph">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                    <button type="submit" class="card-button">vue this template</button>
-                  </div>
+                <div class="col">
+                    <div class="card">
+                        <img src="./assests/Images/card1.webp" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-shortTitle">Card title</h5>
+                            <p class="card-pragraph">This is a longer card with supporting text below as a natural
+                                lead-in to additional content. This content is a little bit longer.</p>
+                            <button type="submit" class="card-button">vue this template</button>
+                        </div>
+                    </div>
                 </div>
-              </div>
-              <div class="col">
-                <div class="card">
-                  <img src="./assests/Images/card1.webp" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-shortTitle">Card title</h5>
-                    <p class="card-pragraph">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                    <button type="submit" class="card-button">vue this template</button>
-                  </div>
+                <div class="col">
+                    <div class="card">
+                        <img src="./assests/Images/card1.webp" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-shortTitle">Card title</h5>
+                            <p class="card-pragraph">This is a longer card with supporting text below as a natural
+                                lead-in to additional content. This content is a little bit longer.</p>
+                            <button type="submit" class="card-button">vue this template</button>
+                        </div>
+                    </div>
                 </div>
-              </div>
-          </div>
+                <div class="col">
+                    <div class="card">
+                        <img src="./assests/Images/card1.webp" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-shortTitle">Card title</h5>
+                            <p class="card-pragraph">This is a longer card with supporting text below as a natural
+                                lead-in to additional content. This content is a little bit longer.</p>
+                            <button type="submit" class="card-button">vue this template</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-</div>
-<!--end card section-->
+    <!--end card section-->
+
+    <!--start footer section-->
+    <footer>
+        <div class="container">
+            <img src="./assests/Images/logo.svg" alt="">
+            <div class="row">
+                <div class=" col-md-3">
+                    <div class="data">
+                        <h4>Product</h4>
+                        <ul>
+                            <li><a href="#">Smart Builder</a></li>
+                            <li><a href="#">Smart Traffic</a></li>
+                            <li><a href="#">Smart Copy</a></li>
+                            <li><a href="#">Apps and Integrations</a></li>
+                            <li><a href="#">Landing Pages</a></li>
+                            <li><a href="#">Popups and Sticky Bars</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class=" col-md-3">
+                    <div class="data">
+                        <h4>Product</h4>
+                        <ul>
+                            <li><a href="#">Smart Builder</a></li>
+                            <li><a href="#">Smart Traffic</a></li>
+                            <li><a href="#">Smart Copy</a></li>
+                            <li><a href="#">Apps and Integrations</a></li>
+                            <li><a href="#">Landing Pages</a></li>
+                            <li><a href="#">Popups and Sticky Bars</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class=" col-md-3">
+                    <div class="data">
+                        <h4>Product</h4>
+                        <ul>
+                            <li><a href="#">Smart Builder</a></li>
+                            <li><a href="#">Smart Traffic</a></li>
+                            <li><a href="#">Smart Copy</a></li>
+                            <li><a href="#">Apps and Integrations</a></li>
+                            <li><a href="#">Landing Pages</a></li>
+                            <li><a href="#">Popups and Sticky Bars</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class=" col-md-3">
+                    <div class="data">
+                        <h4>Product</h4>
+                        <ul>
+                            <li><a href="#">Smart Builder</a></li>
+                            <li><a href="#">Smart Traffic</a></li>
+                            <li><a href="#">Smart Copy</a></li>
+                            <li><a href="#">Apps and Integrations</a></li>
+                            <li><a href="#">Landing Pages</a></li>
+                            <li><a href="#">Popups and Sticky Bars</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+            </div>
+            <div class="social">
+                <p class="copyright">Copyright © 2022. All Rights Reserved.</p>
+                <div class="social-icons">
+                    <ul>
+                        <li><a href="">Security</a></li>
+                        <li><a href="">Privacy Policy</a></li>
+                        <li><a href="">Terms of Service</a></li>
+                        <li><a href="">CCPA</a></li>
+                        <li><a href="">GDPR</a></li>
+                        <li><i class="fa-brands fa-twitter"></i></li>
+                        <li><i class="fa-brands fa-twitter"></i></li>
+                        <li><i class="fa-brands fa-twitter"></i></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!--end footer section-->
+
 
 
 
