--- a/unbounce/index.html
+++ b/unbounce/index.html
@@ -19,7 +19,9 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#">Navbar</a>
+                    <a class="navbar-brand" href="#">
+                        Unbounce
+                    </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false"
                         aria-label="Toggle navigation">
@@ -49,13 +51,18 @@
                                 <a class="nav-link" href="#">Pricing</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">About</a>
+                                <a class="nav-link" href="#">
+                                    Contact
+                                </a>
                             </li>
                         </ul>
                         <form class="d-flex" role="search">
                             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                            <button class="btn btn-outline-light" type="submit">Search</button>
                         </form>
+                       <div class="right-btn gap-2">
+                        <button class="btn_login" type="submit">Login</button>
+                        <button class="btn_trials" type="submit">Start My Free Trials</button>
+                       </div>
                     </div>
                 </div>
             </nav>
